--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,22 @@
-# Config file for automatic testing at travis-ci.org
 
 language: python
 python: 3.7
 
-dist: xenial # default "precise" distro doesn't include Java 8 for Elasticsearch 5
+dist: bionic
 
 matrix:
   include:
-    - env: TOX_ENV=py36-django-111-es6
+    - env: TOX_ENV=py36-django-111
       python: 3.6
-    - env: TOX_ENV=py37-django-111-es6
-      python: 3.7
-    - env: TOX_ENV=py27-django-111-es6
-      python: 2.7
-    - env: TOX_ENV=py36-django-2-es6
+    - env: TOX_ENV=py36-django-22
       python: 3.6
-    - env: TOX_ENV=py37-django-2-es6
+    - env: TOX_ENV=py36-django-30
+      python: 3.6
+    - env: TOX_ENV=py37-django-111
       python: 3.7
-    - env: TOX_ENV=py37-django-21-es6
+    - env: TOX_ENV=py37-django-22
       python: 3.7
-    - env: TOX_ENV=py37-django-22-es6
-      python: 3.7
-    - env: TOX_ENV=py37-django-30-es6
+    - env: TOX_ENV=py37-django-30
       python: 3.7
 
 cache: pip
@@ -31,15 +26,14 @@ env:
 
 before_install:
   # work around https://github.com/travis-ci/travis-ci/issues/8363
-  - pip install codecov
+  - pip install codecov poetry
   - wget -qO - https://packages.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
   - echo "deb $ES_APT_URL stable main" | sudo tee -a /etc/apt/sources.list.d/elk.list
   - sudo apt-get remove --purge elasticsearch -y
   - sudo apt-get update && sudo apt-get install elasticsearch -y
-  - sudo -i service elasticsearch restart
+  - sudo -i systemctl restart elasticsearch
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements_test.txt
+install: poetry install
 
 # sleep for elasticsearch
 before_script:
