--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,6 @@ keywords = ["django", "elasticsearch", "elasticsearch-dsl"]
 classifiers = [
   "Framework :: Django",
   "Framework :: Django :: 1.11",
-  "Framework :: Django :: 2.0",
-  "Framework :: Django :: 2.1",
   "Framework :: Django :: 2.2",
   "Framework :: Django :: 3.0",
   "Intended Audience :: Developers",
@@ -27,19 +25,19 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-django = ">=1.9.6"
+django = ">=1.11"
 "elasticsearch-dsl" = ">=7.0.0,<8.0.0"
 
 [tool.poetry.dev-dependencies]
+psycopg2-binary = "*"
+Pillow= "*"
+
 ipdb = "*"
-#django = ">=2.0,<2.2"
-#elasticsearch-dsl>=7.0.0,<8.0.0
+coverage = "*"
+tox = "*"
+mock = "*"
+flake8 = "*"
 #sphinx
-#coverage==4.1
-#mock>=1.0.1
-#flake8>=2.1.0
-#tox>=1.7.0
-#Pillow= "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
