--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv =
 commands =
     pip install poetry
     poetry install
-    python runtests.py {posargs}
+    poetry run coverage run runtests.py {posargs}
 
 deps =
     django-111: Django>=1.11,<2.0
