--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = {py36,py37}-django-{111,22,30}
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/django_elasticsearch_dsl
+    PYTHONPATH = {toxinidir}:{toxinidir}/django_elasticsearch
 commands =
     pip install poetry
     poetry install
