--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-elasticsearch-ng"
-version = "7.0.0b1"
+version = "7.0.1"
 description = "Wrapper around elasticsearch-dsl for django models"
 authors = [
   "Sabricot",
